--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 h1 {
-  color: rgb(17, 0, 255);  
+  color: lightblue;
 }
-button{
-    color: red;
-    background-color: black;
-    border-color: black;
+.headerButton{
+background-color: white;
+    border-color: white;
+margin: 20px;
 }
